--- a/index.html
+++ b/index.html
@@ -6,10 +6,165 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive-football-web</title>
+    <!-- Css Link -->
+    <link rel="stylesheet" href="main.css/style.css">
+    <!-- font Awesome link  -->
+    <script src="https://kit.fontawesome.com/fcf9cc2b76.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <H1>hello Mithon</H1>
+    <!-- header started -->
+    <header>
+        <section>
+            <div class="banner">
+                <div class="banner-title">
+                    <h1>Conmebol Copa America 2021
+                    </h1>
+                    <div class="banner-icon">
+                        <a href="">Watch Live</a>
+                        <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
+    <!-- header ended -->
+    <!-- main started -->
+    <main>
+        <section class="player-section">
+            <div class="container">
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-info">
+                            <h3 class="player-title">Neymer Jr</h3>
+                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
+                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+    <!-- main ended -->
+    <!-- footer part start -->
+    <footer>
+        <div class="footer">
+            <img src="images/Logo.png" alt="">
+            <div class="footer-icon">
+                <span><i class="fab fa-facebook"></i></span>
+                <span><i class="fab fa-instagram"></i></span>
+                <span><i class="fab fa-twitter-square"></i></span>
+                <span><i class="fab fa-linkedin"></i></span>
+            </div>
+            <p>Copyright &copy;<span> 2022 </span>Football</p>
+        </div>
+    </footer>
+    <!-- footer part ended  -->
 </body>
 
 </html>
