html and css added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <main>
         <section class="player-section">
             <div class="container">
+                <!--Players blog started-->
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
@@ -146,8 +147,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+            <!--Players blog Ended-->
         </section>
     </main>
     <!-- main ended -->
@@ -161,7 +162,7 @@
                 <span><i class="fab fa-twitter-square"></i></span>
                 <span><i class="fab fa-linkedin"></i></span>
             </div>
-            <p>Copyright &copy;<span> 2022 </span>Football</p>
+            <p>Copyright &copy; 2022 Football</p>
         </div>
     </footer>
     <!-- footer part ended  -->
