--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
                         <i class="fas fa-arrow-right"></i>
                     </div>
                 </div>
-                <div>
-                    <img src="images/banner.png" alt="">
+                <div class="animation">
+                    <div class="player-img">
+                        <img src="images/banner.png" alt="">
+                    </div>
+                    <div class="ball">
+                        <img src="images/ball.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
