bouns custom section aded

--- a/index.html
+++ b/index.html
@@ -47,113 +47,148 @@
                         <img src="images/players/player-1.png" alt="">
                         <div class="player-info">
                             <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-2.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Lionel Messi</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-3.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Cristiano Ronaldo</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-4.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Paulo Dybala</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-5.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Mesut Ozil </h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-6.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Mauro Icardi </h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-7.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Di Maria</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-8.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Kylian Mbappé</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-9.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Mohamed Salah</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-10.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Harry Kane</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-11.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Kevin De Bruyne</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                     <div class="player">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-12.png" alt="">
                         <div class="player-info">
-                            <h3 class="player-title">Neymer Jr</h3>
-                            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia reprehenderit porro
-                                recusandae tempora voluptate quibusdam ducimus velit, minus dignissimos quas!</P>
+                            <h3 class="player-title">Philippe Coutinho</h3>
+                            <P>played by a team of 11 players, and there are two teams playing against each other. The
+                                football is round in shape and is kicked by the players.</P>
 
                         </div>
                     </div>
                 </div>
             </div>
             <!--Players blog Ended-->
+        </section>
+        <section class="custom">
+            <div>
+                <h1>
+                    <b>FIFA World cup Best team !</b>
+                </h1>
+            </div>
+            <div class="team-img">
+                <div class="team">
+                    <img src="images/team-1.jpg" alt="">
+                </div>
+
+
+                <div class="team">
+                    <img src="images/team-2.jpg" alt="">
+                </div>
+
+
+                <div class="team">
+                    <img src="images/team-3.jpg" alt="">
+                </div>
+
+        </section>
+        <section class="custom-2">
+            <div class="custom-animations">
+                <div class="custom-animation">
+                    <h1>
+                        <b>Animation Play !</b>
+                    </h1>
+                    <div class="footbal">
+                        <img src="images/ball.png" alt="">
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <!-- main ended -->
