--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="main.css/style.css">
     <!-- font Awesome link  -->
     <script src="https://kit.fontawesome.com/fcf9cc2b76.js" crossorigin="anonymous"></script>
+    <!-- media link  -->
+    <link rel="stylesheet" href="main.css/media.css">
 </head>
 
 <body>
